# Datalogger_Acelerometro_Embarcatech

./: CMakeLists.txt  Main.c  README.md  main.c
lib/: mpu6050.c
lib/FatFs_SPI/: CMakeLists.txt
plotar_graficos/: dados_MPU.csv  nivel0.csv  nivel1.csv  nivel2.csv  nivel3.csv  plot.py  plot_graficos_niveis.py
